# langchain-study-journey

./: .env  chat_bot.db  memory.db  memoryaio.db  pyproject.toml
langchain_study_journey/documentation_tutorials/chat_models_and_prompts/: basic_core_messages.py  basic_prompt_template.py  gemini_prompt_template.py
langchain_study_journey/documentation_tutorials/classification/: main.py
langchain_study_journey/documentation_tutorials/extraction/: multiple_entity.py  single_entity.py
langchain_study_journey/documentation_tutorials/semantic_search/: document_loaders.py
langchain_study_journey/playlist_tutorial/: branch_chain.py  chat_models.py  document_loaders.py  embedding.py  memory_history.py  output_parse.py  parellal_chain.py  prompt.py  runnables.py  text_splitters.py
langchain_study_journey/playlist_tutorial/chat_bot/: faq_chain.py  main.py  main_with_trimmer.py  main_with_trimmer_async.py  memory_async.py  memory_chat.py  my_api.py  roteamento_chain.py  trainer_chain.py
langchain_study_journey/rag/: exemplo.py  rag.py
