[tool.poetry]
name = "langchain-study-journey"
version = "0.1.0"
description = "A collection of projects and experiments to explore and master LangChain."
authors = ["Giovanna Manfredo"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.11"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
