[tool.poetry]
name = "langchain-study-journey"
version = "0.1.0"
description = "A collection of projects and experiments to explore and master LangChain."
authors = ["Giovanna Manfredo"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.11"
langchain-google-vertexai = "^2.0.8"
python-dotenv = "^1.0.1"
langchain-google-genai = "^2.0.6"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
